roll out u2 dough

--- a/_posts/2013-11-10-up-more-than-300p-u2.md
+++ b/_posts/2013-11-10-up-more-than-300p-u2.md
@@ -12,7 +12,8 @@ For those who didn't make it to our last meeting, most of the meeting was listen
 
 The following is an excerpt from a conversation with someone about what futures they would best short (with real money) long term, for which I basically just calculated these numbers:
 
-It's obvious that overtime a short market futures position would make money in the next few years, but we can't say when. I kind of thought the market would start to meaningfully drop before now. Anyways though, the options we have for major market futures are /ES, /NQ, /TF, and /YM. I think it would be safer to maybe short two of those. Those are up 265%, 323%, 321%, and 243% respectively from their lows in 2009. So, I suppose I would short /NQ and /TF. I think it might also be important to see the comparison from their pre-recession highs to our (just last week) highs in this market, but that would take a while. 
+It's obvious that overtime a short market futures position would make money in the next few years, but we can't say when. I kind of thought the market would start to meaningfully drop before now. Anyways though, the options we have for major market futures are /ES, /NQ, /TF, and /YM. I think it would be safer to maybe short two of those. Those are up 265%, 323%, 321%, and 243% respectively from their lows in 2009. So, I suppose I would short /NQ and /TF. I think it might also be important to see the comparison from their pre-recession highs to our (just last week) highs in this market by point (and then multiplied by point value), but that would take a while. 
 
 Ok so the results were $55,050, $46,430, $75,640, and $46,225 respectively (per future) for the earlier list. That makes the /ES and /TF the biggest movers as far ass effect in account goes in this bull market. However, these markets and futures get “rebalanced” ever so often so that could mess up these number a little but they should be basically correct- it's obvious that the /TF is the greatest gainer in that sense, followed by either the /NQ or the /ES.
 
+Like I said guys, feel free to leave comments here, as I want it to act almost like a group text in between meetings. Also, I'm happy to answer any questions though you could also text me.
